// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Chatwit Content Attributes Regression Snapshots Cross-Channel Consistency Snapshots should match consistent additional_attributes across channels: cross-channel-additional-attributes-consistency 1`] = `
{
  "instagram": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-consistency-001",
  },
  "messenger": {
    "channel": "messenger",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-consistency-001",
  },
  "whatsapp": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-consistency-001",
  },
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Edge Cases and Sanitization Snapshots should match fallback button insertion snapshot: fallback-button-insertion 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-fallback-button-001",
  },
  "content": "Escolha uma opção:",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "human_handoff",
              "title": "Falar com atendente",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Escolha uma opção:",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Edge Cases and Sanitization Snapshots should match unique button titles enforcement snapshot: unique-button-titles-enforcement 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-unique-titles-001",
  },
  "content": "Escolha uma opção:",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "track1",
              "title": "Rastrear",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "cancel",
              "title": "Cancelar",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Escolha uma opção:",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Edge Cases and Sanitization Snapshots should match word boundary preservation snapshot: word-boundary-preservation 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-word-boundary-001",
  },
  "content": "Esta é uma mensagem muito longa que precisa ser truncada mas deve preservar as palavras completas sem cortar no meio de uma palavra para manter a legibilidade do texto....",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "ok",
              "title": "OK",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Esta é uma mensagem muito longa que precisa ser truncada mas deve preservar as palavras completas sem cortar no meio de uma palavra para manter a legibilidade do texto....",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Instagram Button Template Message Snapshots should match Instagram button template format snapshot: instagram-button-template-format 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-ig-button-template-001",
  },
  "content": "Como posso ajudar você?",
  "content_attributes": {
    "ig": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [
              {
                "payload": "intent:track_order",
                "title": "Rastrear",
                "type": "postback",
                "url": undefined,
              },
              {
                "payload": undefined,
                "title": "Site",
                "type": "web_url",
                "url": "https://example.com",
              },
              {
                "payload": "human_handoff",
                "title": "Suporte",
                "type": "postback",
                "url": undefined,
              },
            ],
            "template_type": "button",
            "text": "Como posso ajudar você?",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Instagram Button Template Message Snapshots should match Instagram button template with HTTPS validation snapshot: instagram-button-template-https-validation 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-ig-https-validation-001",
  },
  "content": "Links disponíveis:",
  "content_attributes": {
    "ig": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [
              {
                "payload": undefined,
                "title": "HTTPS Site",
                "type": "web_url",
                "url": "https://example.com",
              },
              {
                "payload": "support",
                "title": "Suporte",
                "type": "postback",
                "url": undefined,
              },
            ],
            "template_type": "button",
            "text": "Links disponíveis:",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Instagram Button Template Message Snapshots should match Instagram button template with postback only snapshot: instagram-button-template-postback-only 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-ig-postback-only-001",
  },
  "content": "Selecione uma categoria:",
  "content_attributes": {
    "ig": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [
              {
                "payload": "category:electronics",
                "title": "Eletrônicos",
                "type": "postback",
                "url": undefined,
              },
              {
                "payload": "category:clothing",
                "title": "Roupas",
                "type": "postback",
                "url": undefined,
              },
            ],
            "template_type": "button",
            "text": "Selecione uma categoria:",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Instagram Button Template Message Snapshots should match Instagram button template with web_url only snapshot: instagram-button-template-weburl-only 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-ig-weburl-only-001",
  },
  "content": "Visite nossos links:",
  "content_attributes": {
    "ig": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [
              {
                "payload": undefined,
                "title": "Site Principal",
                "type": "web_url",
                "url": "https://example.com",
              },
              {
                "payload": undefined,
                "title": "Blog",
                "type": "web_url",
                "url": "https://blog.example.com",
              },
            ],
            "template_type": "button",
            "text": "Visite nossos links:",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Instagram Quick Reply Message Snapshots should match Instagram quick reply format snapshot: instagram-quick-reply-format 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-ig-quick-reply-001",
  },
  "content": "Escolha uma das opções abaixo:",
  "content_attributes": {
    "ig": {
      "message": {
        "quick_replies": [
          {
            "content_type": "text",
            "payload": "intent:track_order",
            "title": "Rastrear",
          },
          {
            "content_type": "text",
            "payload": "intent:cancel_order",
            "title": "Cancelar",
          },
          {
            "content_type": "text",
            "payload": "human_handoff",
            "title": "Suporte",
          },
        ],
        "text": "Escolha uma das opções abaixo:",
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Instagram Quick Reply Message Snapshots should match Instagram quick reply with sanitized content snapshot: instagram-quick-reply-sanitized 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-ig-quick-sanitized-001",
  },
  "content": "Esta é uma mensagem muito longa para Instagram que precisa ser truncada para caber nos limites da plataforma. O texto original era muito maior mas foi cortado preservando as palavras completas.",
  "content_attributes": {
    "ig": {
      "message": {
        "quick_replies": [
          {
            "content_type": "text",
            "payload": "option_1",
            "title": "Opção 1",
          },
          {
            "content_type": "text",
            "payload": "option_2",
            "title": "Opção 2",
          },
          {
            "content_type": "text",
            "payload": "option_3",
            "title": "Opção 3",
          },
        ],
        "text": "Esta é uma mensagem muito longa para Instagram que precisa ser truncada para caber nos limites da plataforma. O texto original era muito maior mas foi cortado preservando as palavras completas.",
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Instagram Quick Reply Message Snapshots should match Instagram quick reply with single option snapshot: instagram-quick-reply-single 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-ig-quick-single-001",
  },
  "content": "Confirmar esta ação?",
  "content_attributes": {
    "ig": {
      "message": {
        "quick_replies": [
          {
            "content_type": "text",
            "payload": "confirm_action",
            "title": "Confirmar",
          },
        ],
        "text": "Confirmar esta ação?",
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Messenger Button Template Message Snapshots should match Messenger button template format snapshot: messenger-button-template-format 1`] = `
{
  "additional_attributes": {
    "channel": "messenger",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-messenger-template-001",
  },
  "content": "How can I help you?",
  "content_attributes": {
    "messenger": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [
              {
                "payload": "intent:track_order",
                "title": "Track Order",
                "type": "postback",
                "url": undefined,
              },
              {
                "payload": undefined,
                "title": "Website",
                "type": "web_url",
                "url": "https://example.com",
              },
            ],
            "template_type": "button",
            "text": "How can I help you?",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Schema Version Compliance Snapshots should match required additional_attributes fields snapshot: required-additional-attributes-fields 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-required-fields-001",
  },
  "content": "Test required fields",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Schema Version Compliance Snapshots should match schema version 1.0.0 compliance snapshot: schema-version-compliance-instagram-button-template 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "test-schema-ig-button",
  },
  "content": "Test",
  "content_attributes": {
    "ig": {
      "message": {
        "attachment": {
          "payload": {
            "buttons": [
              {
                "payload": "ok",
                "title": "OK",
                "type": "postback",
                "url": undefined,
              },
            ],
            "template_type": "button",
            "text": "Test",
          },
          "type": "template",
        },
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Schema Version Compliance Snapshots should match schema version 1.0.0 compliance snapshot: schema-version-compliance-instagram-quick-reply 1`] = `
{
  "additional_attributes": {
    "channel": "instagram",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "test-schema-ig-quick",
  },
  "content": "Test",
  "content_attributes": {
    "ig": {
      "message": {
        "quick_replies": [
          {
            "content_type": "text",
            "payload": "ok",
            "title": "OK",
          },
        ],
        "text": "Test",
      },
      "messaging_type": "RESPONSE",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Schema Version Compliance Snapshots should match schema version 1.0.0 compliance snapshot: schema-version-compliance-whatsapp-interactive 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "test-schema-wa-interactive",
  },
  "content": "Test",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "ok",
              "title": "OK",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Test",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Schema Version Compliance Snapshots should match schema version 1.0.0 compliance snapshot: schema-version-compliance-whatsapp-text 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "test-schema-wa-text",
  },
  "content": "Test message",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Special Response Format Snapshots should match human handoff response format snapshot: human-handoff-response-format 1`] = `
{
  "additional_attributes": {
    "assign_to_team": "support",
    "channel": "whatsapp",
    "conversation_status": "open",
    "conversation_tags": [
      "ai_handoff",
      "escalation",
    ],
    "handoff_reason": "ai_failure",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-handoff-001",
  },
  "content": "Acionei um atendente humano para ajudar você.",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots Special Response Format Snapshots should match simple text response format snapshot: simple-text-response-format 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-simple-text-001",
  },
  "content": "Obrigado pela sua mensagem! Um atendente entrará em contato em breve.",
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots WhatsApp Interactive Message Snapshots should match WhatsApp interactive button format snapshot: whatsapp-interactive-button-format 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-wa-interactive-001",
  },
  "content": "Como posso ajudar você hoje?",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "intent:track_order",
              "title": "Rastrear Pedido",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "intent:cancel_order",
              "title": "Cancelar Pedido",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "human_handoff",
              "title": "Falar com Atendente",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Como posso ajudar você hoje?",
      },
      "footer": {
        "text": "SocialWise",
      },
      "header": {
        "text": "Atendimento",
        "type": "text",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots WhatsApp Interactive Message Snapshots should match WhatsApp interactive minimal format snapshot: whatsapp-interactive-minimal 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-wa-minimal-001",
  },
  "content": "Confirmar ação?",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "confirm",
              "title": "Confirmar",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Confirmar ação?",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots WhatsApp Interactive Message Snapshots should match WhatsApp interactive with economic mode snapshot: whatsapp-interactive-economic-mode 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "economic_mode": true,
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-wa-economic-001",
  },
  "content": "Como ajudar?",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "help",
              "title": "Ajuda",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Como ajudar?",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots WhatsApp Interactive Message Snapshots should match WhatsApp interactive with footer only snapshot: whatsapp-interactive-footer-only 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-wa-footer-only-001",
  },
  "content": "Precisa de mais informações?",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "intent:yes",
              "title": "Sim",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "intent:no",
              "title": "Não",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Precisa de mais informações?",
      },
      "footer": {
        "text": "Powered by SocialWise",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots WhatsApp Interactive Message Snapshots should match WhatsApp interactive with header only snapshot: whatsapp-interactive-header-only 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-wa-header-only-001",
  },
  "content": "Escolha uma opção abaixo:",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "intent:products",
              "title": "Produtos",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "intent:support",
              "title": "Suporte",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Escolha uma opção abaixo:",
      },
      "header": {
        "text": "Menu Principal",
        "type": "text",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;

exports[`Chatwit Content Attributes Regression Snapshots WhatsApp Interactive Message Snapshots should match WhatsApp interactive with sanitized content snapshot: whatsapp-interactive-sanitized 1`] = `
{
  "additional_attributes": {
    "channel": "whatsapp",
    "provider": "meta",
    "schema_version": "1.0.0",
    "trace_id": "trace-wa-sanitized-001",
  },
  "content": "Esta é uma mensagem muito longa que precisa ser truncada para caber nos limites do WhatsApp. O texto original era muito maior mas foi cortado preservando as palavras completas sem cortar no meio de uma palavra para manter a legibilidade.",
  "content_attributes": {
    "interactive": {
      "action": {
        "buttons": [
          {
            "reply": {
              "id": "long_button_1",
              "title": "Botão com título...",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "long_button_2",
              "title": "Outro botão longo",
            },
            "type": "reply",
          },
          {
            "reply": {
              "id": "button_3",
              "title": "Terceiro botão",
            },
            "type": "reply",
          },
        ],
      },
      "body": {
        "text": "Esta é uma mensagem muito longa que precisa ser truncada para caber nos limites do WhatsApp. O texto original era muito maior mas foi cortado preservando as palavras completas sem cortar no meio de uma palavra para manter a legibilidade.",
      },
      "type": "button",
    },
  },
  "message_type": "outgoing",
  "private": false,
}
`;
